
SET_DIRECTORY_PROPERTIES(PROPERTIES COMPILE_DEFINITIONS SHOW_MESSAGE=1)
ADD_SUBDIRECTORY(avx2)
ADD_SUBDIRECTORY(zen3)
ADD_SUBDIRECTORY(zen4)

#CMAKE_POLICY(SET CMP0079 NEW)

#SET(ARCH_COMMON_SRCS 
#	arch.cc)

SET(ARCH_SRCS ${ARCH_COMMON_SRCS} ${ZEN3_SRCS})

IF ("${ARCH_SRCS}")
TARGET_SOURCES(alcp
	PRIVATE
		${ARCH_SRCS}
	)
ENDIF()

#SET(ARCH_SRCS ${ARCH_SRCS} PARENT_SCOPE)
#TARGET_LINK_LIBRARIES(alcp
#	PRIVATE
#	arch_zen3)

MESSAGE(STATUS "Arch common srcs" ${ARCH_SRCS})

