
# FILE(GLOB RNG_SRCS "*.cc")

SET(RNG_SRCS builder.cc os_rng.cc aocl_srng.cc)

IF(AOCL_INSTALL_DIR)
	MESSAGE(STATUS "Enabling AOCL SRNG")
	TARGET_INCLUDE_DIRECTORIES(alcp PRIVATE ${AOCL_INSTALL_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/include)
	TARGET_LINK_LIBRARIES(alcp PRIVATE ${AOCL_INSTALL_DIR}/lib/libamdsecrng.a)
ENDIF(AOCL_INSTALL_DIR)

TARGET_SOURCES(alcp
	PRIVATE
		${RNG_SRCS}
	)

